Modified index view to show a marker for every location in the map

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -29,3 +29,16 @@
 <br>
 
 <%= link_to 'New Location', new_location_path %>
+
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+
+<script>
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+markers = handler.addMarkers(<%=raw @hash.to_json %>);
+handler.bounds.extendWith(markers);
+handler.fitMapToBounds();
+});
+</script>
